# rpc-plane

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  config.example.toml  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  cla.yml  release.yml
benches/: proxy_bench.rs
examples/: dedicated-with-metered-backup.toml  fast-tx-landing.toml  free-tier.toml  helius-quicknode-triton.toml  single-provider.toml  trading-bot.toml
examples/deploy/: README.md
examples/deploy/docker-compose/: .env.example  docker-compose.observability.yml  docker-compose.yml  prometheus.yml  rpc-plane.toml
examples/deploy/docker-compose/grafana/provisioning/dashboards/: dashboards.yml
examples/deploy/docker-compose/grafana/provisioning/datasources/: datasource.yml
examples/deploy/kubernetes/: deployment.yaml  servicemonitor.yaml  sidecar.yaml
examples/deploy/nomad/: rpc-plane.nomad.hcl
examples/deploy/systemd/: rpc-plane.env.example  rpc-plane.service
grafana/: dashboard.json
rpc-plane/: Cargo.toml
rpc-plane-core/: Cargo.toml  build.rs
rpc-plane-core/benches/: proxy_bench.rs
rpc-plane-core/src/: config.rs  health.rs  lib.rs  metrics.rs  proxy.rs  router.rs  slot_tracker.rs  telemetry.rs
rpc-plane-core/tests/: integration.rs
rpc-plane/src/: main.rs
scripts/: check-docs-coverage.sh  load-test.sh  release.sh
signatures/version1/: cla.json
src/: config.rs  health.rs  historical.rs  integration_tests.rs  main.rs  metrics.rs  proxy.rs  telemetry.rs  tx.rs
tools/dummy-rpc/: Cargo.toml
tools/dummy-rpc/src/: main.rs
tools/load-test/: Cargo.toml
tools/load-test/src/: main.rs
