[workspace]
members = [
    "rpc-plane",
    "rpc-plane-core",
    "tools/dummy-rpc",
    "tools/load-test",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/rpcplane/rpc-plane"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "http2", "http3", "gzip", "brotli", "deflate", "zstd", "charset"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
prometheus = { version = "0.14", default-features = false, features = ["process"] }
parking_lot = "0.12"
rand = "0.9"
shellexpand = "3"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["fs", "catch-panic"] }
libc = "0.2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = "0.5"
http-body-util = "0.1"
