[package]
name = "rpc-plane"
description = "Solana RPC proxy — intelligent multi-provider routing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["solana", "rpc", "proxy", "failover"]
categories = ["command-line-utilities", "network-programming"]
autolib = false
include = [
    "/src/**",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/config.example.toml",
]

[[bin]]
name = "rpc-plane"
path = "src/main.rs"

[workspace]
members = [
    "tools/dummy-rpc",
    "tools/load-test",
]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Elastic-2.0"
repository = "https://github.com/rpcplane/rpc-plane"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "http2", "http3", "gzip", "brotli", "deflate", "zstd", "charset"] }
bytes = "1"
base64 = "0.22"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
prometheus = { version = "0.14", default-features = false, features = ["process"] }
parking_lot = "0.12"
rand = "0.9"
shellexpand = "3"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["fs", "catch-panic"] }
libc = "0.2"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
tower = "0.5"
http-body-util = "0.1"

[dependencies]
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
bytes.workspace = true
base64.workspace = true
bs58.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
uuid.workspace = true
prometheus.workspace = true
parking_lot.workspace = true
rand.workspace = true
shellexpand.workspace = true
tower-http.workspace = true
libc.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "proxy_bench"
harness = false
