[package]
name = "dummy-rpc"
description = "Minimal Solana JSON-RPC echo server for local load testing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dummy-rpc"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
